--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2024"
 
 [dependencies]
 dotenv = "0.15.0"
+moka = { version = "0.12.11", features = ["future"] }
 poise = "0.6.1"
 tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
