--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+clap = { version = "4.5.53", features = ["derive"] }
 dotenv = "0.15.0"
 moka = { version = "0.12.11", features = ["future"] }
 poise = "0.6.1"
+sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
 tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
