--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ moka = { version = "0.12.11", features = ["future"] }
 poise = "0.6.1"
 sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
 tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
+tracing = "0.1.43"
+tracing-subscriber = "0.3.22"
