--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
 tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
 tracing = "0.1.43"
 tracing-subscriber = "0.3.22"
+
+[dev-dependencies]
+serial_test = "3.2.0"
