--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,15 @@ on:
   push:
     branches:
       - main
+    paths:
+      - '*.rs'
+      - '*.sql'
   pull_request:
     branches:
       - main
+    paths:
+      - '*.rs'
+      - '*.sql'
   workflow_dispatch:
 
 jobs:
