--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,8 @@ on:
     paths:
       - '*.rs'
       - '*.sql'
+    tags-ignore:
+      - 'v*.*.*'
   pull_request:
     branches:
       - main
@@ -12,6 +14,7 @@ on:
       - '*.rs'
       - '*.sql'
   workflow_dispatch:
+  workflow_call:
 
 jobs:
   tests:
