--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -13,10 +13,7 @@ on:
 
 jobs:
   ci:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v5
-      - uses: './.github/workflows/ci.yml'
+    uses: './.github/workflows/ci.yml'
   cd:
     runs-on: ubuntu-latest
     needs: ci
