use GITHUB_REF to get tag version in cicd workflow

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Validate and set version tag
         shell: bash
         run: |
-          TAG=${{ github.ref_name }}
+          TAG=${GITHUB_REF#refs/*/}
           if [[ -z $TAG ]]; then
             TAG=${{ github.workflow.inputs.tag }}
           fi
