--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           TAG=${GITHUB_REF#refs/*/}
           if [[ -z $TAG ]]; then
-            TAG=${{ github.workflow.inputs.tag }}
+            TAG=${{ inputs.tag }}
           fi
           echo "TAG is `$TAG`"
           if [[ $TAG =~ ^v([0-9]+\.){2}[0-9]+$ ]]; then
