--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -24,11 +24,11 @@ jobs:
         shell: bash
         run: |
           TAG=${GITHUB_REF#refs/*/}
-          if [[ -z $TAG ]]; then
-            TAG=${{ inputs.tag }}
+          if [[ -z "$TAG" ]]; then
+            TAG="${{ inputs.tag }}"
           fi
           echo "TAG is `$TAG`"
-          if [[ $TAG =~ ^v([0-9]+\.){2}[0-9]+$ ]]; then
+          if [[ "$TAG" =~ ^v([0-9]+\.){2}[0-9]+$ ]]; then
             echo VERSION_TAG=$TAG >> $GITHUB_ENV
           else
             exit 1
