--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -27,7 +27,7 @@ jobs:
           if [[ -z "$TAG" ]]; then
             TAG="${{ inputs.tag }}"
           fi
-          echo "TAG is `$TAG`"
+          echo "TAG is \`$TAG\`"
           if [[ "$TAG" =~ ^v([0-9]+\.){2}[0-9]+$ ]]; then
             echo VERSION_TAG=$TAG >> $GITHUB_ENV
           else
