add workflow_call trigger to build-docker-image workflow

--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -5,6 +5,12 @@ on:
         type: string
         description: Tag to use for docker image
         required: true
+  workflow_call:
+    inputs:
+      version-tag:
+        type: string
+        description: Tag to use for docker image
+        required: true
 
 jobs:
   build-and-push:
