--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -49,4 +49,4 @@ jobs:
     uses: './.github/workflows/release.yml'
     needs: version-tag
     with:
-      version_tag: ${{ needs.version-tag.version_tag }}
+      version_tag: ${{ needs.version-tag.outputs.version_tag }}
