--- a/.github/workflows/release-docker-image.yml
+++ b/.github/workflows/release-docker-image.yml
@@ -1,3 +1,5 @@
+name: Docker Image Release
+
 on:
   workflow_dispatch:
     inputs:
@@ -14,6 +16,7 @@ on:
 
 jobs:
   build-and-push:
+    name: Docker Build & Push
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -28,7 +31,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
         
-      - name: Build and push Docker container image
+      - name: Build and Push Docker Container Image
         uses: docker/build-push-action@v4
         with:
           push: true
