--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,5 @@
+name: CI Checks
+
 on:
   push:
     branches:
@@ -18,6 +20,7 @@ on:
 
 jobs:
   tests:
+    name: Unit Tests & Static Analysis
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
